# CiteRight

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  railway.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
fixtures/: courtlistener_fixture.json  sample_brief.md
src/: artifact.rs  audit.rs  bindings.rs  candidates.rs  claims.rs  courtlistener.rs  document.rs  emit.rs  extract.rs  hash.rs  lib.rs  main.rs  models.rs  planner.rs  report.rs  resolver.rs  selector.rs  snapshot.rs  verify.rs  verify_selected.rs
src/reasoning/: analyzer.rs  applicability.rs  argument_graph.rs  holdings_extractor.rs  mod.rs  validation.rs
templates/: index.html
tests/: live_verify_ai.rs  pipeline.rs
